src/main/metadata/objects/Account_Object__mdt.object
<CustomObject>
    <fields>
        <fullName>Cooperative_society_TL__c</fullName>
        <label>Cooperative society TL</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cooperative_society__c</fullName>
        <label>Cooperative society</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education_insitution_TL__c</fullName>
        <label>Education insitution TL</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education_insitution__c</fullName>
        <label>Education insitution</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Joint_venture_TL__c</fullName>
        <label>Joint venture TL</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Joint_venture__c</fullName>
        <label>Joint venture</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limited_liability_company_T__c</fullName>
        <label>Limited liability company TL</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limited_liability_company__c</fullName>
        <label>Limited liability company</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limited_partnership_company_TL__c</fullName>
        <label>Limited partnership company TL</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limited_partnership_company__c</fullName>
        <label>Limited partnership company</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MD__c</fullName>
        <label>Market Discriminator</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_corporation_TL__c</fullName>
        <label>Medical corporation TL</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_corporation__c</fullName>
        <label>Medical corporation</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_enterprise_TL__c</fullName>
        <label>Medical enterprise TL</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_enterprise__c</fullName>
        <label>Medical enterprise</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mutual_aid_association_TL__c</fullName>
        <label>Mutual aid association TL</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mutual_aid_association__c</fullName>
        <label>Mutual aid association</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mutual_company_TL__c</fullName>
        <label>Mutual company TL</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mutual_company__c</fullName>
        <label>Mutual company</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Others_TL__c</fullName>
        <label>Others TL</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Others__c</fullName>
        <label>Others</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist_Name__c</fullName>
        <label>Picklist Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Religious_corporation_TL__c</fullName>
        <label>Religious corporation TL</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Religious_corporation__c</fullName>
        <label>Religious corporation</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_welfare_institution_TL__c</fullName>
        <label>Social welfare institution TL</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_welfare_institution__c</fullName>
        <label>Social welfare institution</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_company_TL__c</fullName>
        <label>Stock company TL</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_company__c</fullName>
        <label>Stock company</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unlimited_partnership_company_TL__c</fullName>
        <label>Unlimited partnership company TL</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unlimited_partnership_company__c</fullName>
        <label>Unlimited partnership company</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>company legal form</label>
    <pluralLabel>company legal form</pluralLabel>
</CustomObject>